<resources>
    <string name="first_day_switch">Click here to start the week on Mondays instead of Sundays</string>
    <string name="first_day_switcher">Week settings</string>
    <string name="today">Today</string>
    <string name="reminders">Reminders</string>
    <string name="Enter">Enter</string>
    <string name="ReminderName">ReminderName</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="helloandwelcome">Hello! Thank you for using our application.</string>
    <string name="ifyouhavequestions">If you have any questions email us</string>
    <string name="email">at gatorcalendar@ufl.edu.</string>
    <string name="ProfessorName">ProfessorName</string>
    <string name="ClassName">ClassName</string>
    <string name="ToggleView">Toggle View</string>
    <string name="app_name">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="intro_string">Calendar App</string>
    <string name="users">Users</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="commute">Commute</string>
    <string name="tasks">Reminders</string>
    <string name="classes">Classes</string>
    <string name="calendar_view">Weekly View</string>
    <string name="home">Home</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="welcome_name">Welcome %s</string>
    <string name="mwf">MWF</string>
    <string name="t_r">T/R</string>
    <string name="commit_location">Add Class Location</string>
    <string name="ask_prof">Enter Professor name</string>
    <string name="ask_class">Enter class name</string>
    <string name="date_picker_title">Start date of Class:</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start Date</string>
    <string name="commit">Commit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_weekly_view">Weekly View</string>
    <string name="title_activity_help">Help</string>
    <string name="ask_commitment">Enter Event name</string>
    <string name="ask_notes">Enter Notes </string>
    <string name="reminder_time">Time</string>
    <string name="reminder_date">Date</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="question_1">I accidentally misspelled my name. How can I fix it?</string>
    <string name="answer_1">You can reset the app to its beginning state through System Settings > Apps > Calendar > Storage > Clear Data. Keep in mind this will also erase all classes and reminders.</string>
    <string name="question_2">Is it possible to change the language of the app?</string>
    <string name="answer_2">Yes, the app is supported in English and Spanish. The language options can be toggled through Settings > General > Language Settings.</string>
    <string name="question_3">How can I turn off notifications?</string>
    <string name="answer_3">Go to System Settings > Notifications > Calendar. There you can choose “Block All”
so that notifications never show, or “Show Silently” to turn off notification sounds and
vibrations.</string>
    <string name="question_4">How do I add a class in the app?</string>
    <string name="answer_4">On the home screen, press the “ADD CLASS” button. There, insert your class
information in the appropriate fields, and press “COMMIT” at the bottom of the screen to
submit the class. Your class card will now appear on the home screen.</string>
    <string name="question_5">How do I delete a class in the app?</string>
    <string name="answer_5">Long Click on the card for the class you want to delete and select “YES” when asked
if you would like to delete the commitment.</string>
    <string name="question_6">If I clear my app’s data, what will happen to my classes?</string>
    <string name="answer_6">If you clear the app’s data, data will be deleted from the local database. Only clear
the data on your app if you wish to reset the app to its beginning state. If you want to
clear up space, go to System Settings > Apps > Calendar > Storage > Clear Cache.</string>
    <string name="question_7">How can I find out where my next class is?</string>
    <string name="answer_7">On the home screen, press the pointer icon in the upper right. This opens the
commute screen, where you can search for the location of your next class usingGoogle. If you select directions, the app will open Google Maps and show directions
from your current location to your class.</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="language_switcher_text">Language settings</string>
    <string name="language_switcher"> Switch the app to Spanish by clicking here.
   </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="time_picker_title">Pick Class Time</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="add_class">Add Class</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="commit_reminder">Commit</string>
    <string name="welcome_to_your_calendar_app">Welcome to your Calendar app</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="start_date_1">Start Date</string>
    <string name="start_time_1">Start Time</string>
    <string name="professorname">ProfessorName</string>
    <string name="classname">ClassName</string>
    <string name="start_date_2">Start Date</string>
    <string name="end_date_1">End Date</string>
    <string name="end_time_1">End time</string>
    <string name="end_date_3">End Date</string>
    <string name="start_time_3">Start Time</string>
    <string name="end_time_3">End time</string>

</resources>
