<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="language_switch"
        android:summary="@string/language_switcher"
        android:title="@string/language_switcher_text" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="first_day_switch"
        android:summary="@string/first_day_switch"
        android:title="@string/first_day_switcher" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
</PreferenceScreen>
