<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fuchs"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/dialog_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="15dp"
            android:textColor="#FF4500"
            android:text="@string/welcome_to_your_calendar_app"
            android:layout_marginTop="50sp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/user_name"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textColorHint="#FF4500"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:text="@string/Enter" />
</LinearLayout>