<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.group18.app.calendar.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/weeklyviewtoolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/monday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/tuesday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/wednesday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/thursday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/friday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/saturday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/day7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sunday"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>