<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.group18.app.calendar.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/mytoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/start_add_class"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/add_class"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/start_reminder"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/add_reminder" />

</RelativeLayout>

    <!--<LinearLayout -->
        <!--   android:layout_width="match_parent"-->
           <!--   android:layout_height="wrap_content"-->
              <!--    android:orientation="vertical">-->
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:text="@string/today"
                      android:textSize="20dp"
                      android:textStyle="bold"
                      android:background="@color/colorPrimary"
                      android:gravity="center"/>
                  <android.support.v7.widget.RecyclerView
                      android:id="@+id/my_recycler_view"
                      android:layout_width="match_parent"
                      android:layout_height="250dp"
                      android:layout_marginBottom="50dp"
                      android:padding="4dp"
                      android:scrollbars="vertical" />
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:text="@string/reminders"
                      android:textSize="20dp"
                      android:textStyle="bold"
                      android:background="@color/colorPrimary"
                      android:gravity="center"/>
                  <android.support.v7.widget.RecyclerView
                      android:id="@+id/my_recycler_view2"
                      android:layout_width="match_parent"
                      android:layout_height="250dp"
                      android:layout_marginBottom="50dp"
                      android:padding="4dp"
                      android:scrollbars="vertical" />
              <!--</LinearLayout> -->

</LinearLayout>